<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_contact"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_contact"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/lbl_contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/string_name"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/lbl_contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/string_number"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/lbl_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/string_schedule"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/lbl_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/string_status"
                    android:textSize="16sp"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:background="@drawable/ic_edit"/>

            <ImageView
                android:id="@+id/img_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:background="@drawable/ic_delete"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
